--- a/css/creative.css
+++ b/css/creative.css
@@ -466,3 +466,10 @@ body {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 500;
 }
+@media (min-width: 768px) {
+  .galeria-img {
+    width: 450px;
+    height: 240px;
+    object-fit: cover;
+  }
+}
