--- a/less/creative.less
+++ b/less/creative.less
@@ -411,3 +411,11 @@ body {
     .sans-serif-font;
     font-weight: 500;
 }
+@media (min-width: 768px) {
+    .galeria-img {
+        width: 450px;
+        height: 240px;
+        object-fit: cover;
+    }
+}
+
